# FluxGL

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
examples/: CMakeLists.txt  hello.cpp
examples/3d/: 3d.cpp
examples/3d/assets/shaders/: fragment.glsl  vertex.glsl
examples/audio/: audio.cpp
examples/hello/: hello.cpp
examples/hello/assets/shaders/: fragment.glsl  vertex.glsl
examples/light/: light.cpp
examples/light/assets/shaders/: base.fragment.glsl  base.vertex.glsl  flat.frag.glsl  fragment.glsl  light_source.fragment.glsl  vertex.glsl
examples/light/behaviors/: fps_controller.h
examples/textures/: textures.cpp
examples/textures/assets/shaders/: texture.frag  texture.vert
examples/transform/: transform.cpp
examples/transform/assets/shaders/: fragment.glsl  vertex.glsl
include/fluxgl/: fluxgl.h
include/fluxgl/audio/: audio_engine.h  sound.h  source.h
include/fluxgl/components/: camera.h  light.h  renderable.h  transform.h
include/fluxgl/core/: app.h  error.h  log.h  scene.h  scene_manager.h  window.h
include/fluxgl/ecs/: behavior.h  behavior.inl  entity.h  entity.inl  registry.h  registry.inl  system.h
include/fluxgl/ecs/components/: audio_listener.h  audio_source.h  camera.h  light.h  mesh_renderer.h
include/fluxgl/ecs/systems/: audio_system.h  render_system.h
include/fluxgl/graphics/: material.h  mesh.h  renderer.h  shader.h  texture.h  vertex.h
include/fluxgl/input/: input_manager.h
include/fluxgl/utils/: compute.h  file.h
scripts/: build.sh  clean.sh
src/: fluxgl.cpp
src/audio/: audio_engine.cpp
src/core/: app.cpp  error.cpp  log.cpp  scene.cpp  scene_manager.cpp  window.cpp
src/ecs/: behavior.cpp  entity.cpp  registry.cpp
src/ecs/systems/: audio_system.cpp  render_system.cpp
src/graphics/: mesh.cpp  renderer.cpp  shader.cpp  texture.cpp
src/input/: input_manager.cpp
src/utils/: compute.cpp  file.cpp
